--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -21,6 +21,7 @@
     align-items: center
     overflow-y: scroll
     width: 17%
+    min-width: 270px
     height: 100vh
     background: $menu-color
     +hide-scroll-bar
