--- a/src/styles/blocks/title.sass
+++ b/src/styles/blocks/title.sass
@@ -2,13 +2,9 @@
     position: relative
     display: inline-block
     padding-left: 20px
-    +title1-s
+    +title1
 
 
 .title-orange
     &:before
         background: $orange
-
-
-
-
