--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -50,6 +50,7 @@ $n9: #000000
 $g2: #FCFCFD
 $g3: #D0D5DD
 $g7: #344054
+$g8: #1D2939
 
 
 // typography
@@ -58,6 +59,12 @@ $g7: #344054
     font-weight: 600
     line-height: calc(24/15)
 
+=title1
+    font-size: 16px
+    font-style: normal
+    font-weight: 500
+    line-height: 24px
+    +Poppins
 =title1-s
     font-size: 1rem
     font-weight: 600
