--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -28,12 +28,15 @@
 // colors
 $orange: #ffa563
 $orange_secondary: #FFEBD6
+$orange_secondary_light: #fff5eb
 $green: #00b27a
 $green_secondary: #EBFFF9
 $blue: #6392ff
 $blue_secondary: #D6E5FF
+$blue_secondary_light: #ebf2ff
 $red:#fc6371
 $red_secondary:#FED8DB
+$red_secondary_light:#ffe8ea
 $menu-color:#f6f6f6
 
 $n: #FFFFFF
@@ -52,6 +55,9 @@ $g3: #D0D5DD
 $g7: #344054
 $g8: #1D2939
 
+$primary_100:#D6FFF2
+$primary_700:#008F62
+$success_50:#ECFDF3
 
 // typography
 =base-font
