--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -50,12 +50,20 @@ $n7: #1A1D1F
 $n8: #111315
 $n9: #000000
 
+$g05: #F9FAFB
+$g1: #F2F4F7
 $g2: #FCFCFD
 $g3: #D0D5DD
+$g4: #98A2B3
+$g5: #667085
+$g6: #475467
 $g7: #344054
 $g8: #1D2939
 
+$primary_50:#EBFFF9
 $primary_100:#D6FFF2
+$primary_200:#B8EDD7
+$primary_500:#00B27A
 $primary_700:#008F62
 $success_50:#ECFDF3
 
@@ -71,6 +79,7 @@ $success_50:#ECFDF3
     font-weight: 500
     line-height: 24px
     +Poppins
+    
 =title1-s
     font-size: 1rem
     font-weight: 600
@@ -106,6 +115,10 @@ $success_50:#ECFDF3
   &::-webkit-scrollbar 
       width: 0
       height: 0
+
+=placeholder
+    &::placeholder
+        @content
 
 // theme
 =dark
