--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -39,6 +39,8 @@ $red_secondary:#FED8DB
 $red_secondary_light:#ffe8ea
 $menu-color:#f6f6f6
 
+$orange_500: #FF9933
+
 $n: #FFFFFF
 $n1: #FCFCFC
 $n2: #F4F4F4
