--- a/src/components/Form/RadioGroupItem/style.module.sass
+++ b/src/components/Form/RadioGroupItem/style.module.sass
@@ -23,8 +23,6 @@
             color: helpers.$primary_800
         p
             color: helpers.$primary_500
-
-    //hacer esto mas especifico quizas importando la clase o algo. moverlo de inline a style
     div
         padding: 0 !important
         .text
@@ -38,11 +36,8 @@
 
 .moreInformation
     margin-left: 24px
+    margin-top: 8px
     font-size: 12px
-    font-weight: 600
-    padding-block: 8px
-    color: helpers.$primary_700
-    text-decoration: underline
 
 .extraOptions
     padding: 18px 30px
