--- a/src/components/Tooltip/style.module.sass
+++ b/src/components/Tooltip/style.module.sass
@@ -12,6 +12,7 @@
     display: grid
     gap: 4px
     justify-items: start
+    transition: all .1s ease-in
     &.show
         opacity: 1
         pointer-events: auto
