--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -69,6 +69,10 @@ $primary_500:#00B27A
 $primary_700:#008F62
 $success_50:#ECFDF3
 
+$error_100: #FEE4E2
+$error_200: #FECDCA
+$error_500: #F04438
+
 // typography
 =base-font
     font-size: 0.8rem
