--- a/src/styles/helpers.sass
+++ b/src/styles/helpers.sass
@@ -67,6 +67,7 @@ $primary_100:#D6FFF2
 $primary_200:#B8EDD7
 $primary_500:#00B27A
 $primary_700:#008F62
+$primary_800:#006646
 $success_50:#ECFDF3
 
 $error_100: #FEE4E2
