--- a/src/components/Icon/Icons.module.sass
+++ b/src/components/Icon/Icons.module.sass
@@ -11,23 +11,28 @@
     border: 8px solid $success_50
     background: $primary_100
     svg
-        fill: $primary_700
+        // fill: $primary_700
     border-radius: 50%
 .wrapper_red
     border: 8px solid $red_secondary_light
     background: $red_secondary
     svg
-        fill: $red
+        // fill: $red
     border-radius: 50%
 .wrapper_blue
     border: 8px solid $blue_secondary_light
     background: $blue_secondary
     svg
-        fill: $blue
+        // fill: $blue
     border-radius: 50%
 .wrapper_orange
     border: 8px solid $orange_secondary_light
     background: $orange_secondary
     svg
-        fill: $orange
+        // fill: $orange
+    border-radius: 50%
+.wrapper_gray
+    border: 8px solid $g05
+    background: $g1
+    svg
     border-radius: 50%
