[AIG-1770] Navbar disposition widget
- [x] Create the navbar disposition widget component.

| Description         | value                                                              |
| ------------------- | -------------------------------------------------------------------|
| Type                | feature 			                                   |
| Ticket              | [AIG-1770](https://linear.app/aigot/issue/AIG-1770/navbar-disposition)|
| Have tests          | :negative_squared_cross_mark:            			   |

--- a/lib/components/Editor/BannerDisposition/style.module.sass
+++ b/lib/components/Editor/BannerDisposition/style.module.sass
@@ -9,8 +9,8 @@
 
 .buttonContainer
     padding: 12px
-    display: flex
-    justify-content: end
+    display: block
+    margin-left: auto
 
 .textContainer
     display: flex
