--- a/lib/components/Accordion/style.module.sass
+++ b/lib/components/Accordion/style.module.sass
@@ -1,6 +1,11 @@
+.card
+    display: flex
+    justify-content: space-between
+    align-items: center
+    
 .chevron
     transition: all .2s
-    &.active
+    &.open
         transform: rotate(180deg)
 
 .children
