[AIG-1840] Color picker
Component to pick a color from any of the displayable colors.

- [x] Create the ColorPicker component
- [x] Create the eyedropper reusable logic
- [x] Create the eyedropper component

| Description         | value                                                              |
| ------------------- | -------------------------------------------------------------------|
| Type                | feature			                                   |
| Ticket              | [AIG-1840](https://linear.app/aigot/issue/AIG-1840/color-picker)|
| Have tests          | :negative_squared_cross_mark:            			   |

--- a/lib/components/Editor/SingleColorViewer/style.module.sass
+++ b/lib/components/Editor/SingleColorViewer/style.module.sass
@@ -1,3 +1,5 @@
+@use '../../../styles/helpers'
+    
 .container 
     display: flex
     gap: 8px
@@ -19,3 +21,5 @@
 .colorSquare
     height: 48px
     aspect-ratio: 1
+    border: 1px solid helpers.$g3
+    border-radius: 2px
