--- a/lib/components/HorizontalTabs/style.module.sass
+++ b/lib/components/HorizontalTabs/style.module.sass
@@ -1,13 +1,11 @@
 @use '../../styles/helpers'
-@value underline, underlineFilled, white from "./HorizontalTabsLink/style.module.sass"
-
 
 .horizontalTabs
     display: flex
     gap: 8px
-    &:has(> .underline), &:has(> .underlineFilled)
+    &.underline
         border-bottom: 1px solid #EAECF0
-    &:has(> .white) 
+    &.container
         padding: 6px
         border-radius: 8px
         background-color: helpers.$g05
