graphic editor first commit

--- a/lib/components/Button/style.module.sass
+++ b/lib/components/Button/style.module.sass
@@ -15,27 +15,19 @@
   &.stroke
     background: helpers.$n
     border: 1px solid helpers.$g3
-    svg
-      fill: helpers.$n9
     color: helpers.$n9
     &:hover
       background: helpers.$n9
       color: helpers.$n
-      svg
-        fill: helpers.$n
       &:disabled
         background: transparent
       
   &.text
     background: transparent
     color: helpers.$g7
-    svg
-      fill: helpers.$g7
     &:hover
       background: transparent
       color: helpers.$n9
-      svg
-        fill: helpers.$n9
   &:disabled
     opacity: .5
     cursor: default
@@ -44,8 +36,6 @@
 
 .orange
   background: helpers.$orange
-  svg
-    fill: helpers.$n1
   &:hover
     background: darken(helpers.$orange, 10)
     &:disabled
@@ -53,8 +43,6 @@
   &.secondary
     background: helpers.$orange_secondary
     color: helpers.$orange
-    svg
-      fill: helpers.$orange
     &:hover
       background: darken(helpers.$orange_secondary, 10)
       &:disabled
@@ -62,8 +50,6 @@
 
 .green
   background: helpers.$green
-  svg
-    fill: helpers.$n1
   &:hover
     background: darken(helpers.$green, 10)
     &:disabled
@@ -71,8 +57,6 @@
   &.secondary
     background: helpers.$green_secondary
     color: helpers.$green
-    svg
-      fill: helpers.$green
     &:hover
       background: darken(helpers.$green_secondary, 10)
       &:disabled
@@ -80,8 +64,6 @@
 
 .red
   background: helpers.$red
-  svg
-    fill: helpers.$n1
   &:hover
     background: darken(helpers.$red, 10)
     &:disabled
@@ -89,8 +71,6 @@
   &.secondary
     background: helpers.$red_secondary
     color: helpers.$red
-    svg
-      fill: helpers.$red
     &:hover
       background: darken(helpers.$red_secondary, 10) 
       &:disabled
@@ -98,8 +78,6 @@
 
 .blue
   background: helpers.$blue
-  svg
-    fill: helpers.$n1
   &:hover
     background: darken(helpers.$blue, 10)
     &:disabled
@@ -107,12 +85,18 @@
   &.secondary
     background: helpers.$blue_secondary
     color: helpers.$blue
-    svg
-      fill: helpers.$blue
     &:hover
       background: darken(helpers.$blue_secondary, 10)  
       &:disabled
         background: helpers.$blue_secondary
+
+.white
+  background: white
+  color: #344054
+  &:hover
+    background: darken(white, 5)
+    &:disabled
+      background: white
 
 
 .icon_container
