--- a/lib/components/Editor/BaseEditor/Sidebar/style.module.sass
+++ b/lib/components/Editor/BaseEditor/Sidebar/style.module.sass
@@ -1,9 +1,12 @@
 @use '../../../../styles/helpers'
 
 .sidebar
-    background-color: white 
-    
+    background-color: white     
+    > div
+        background-color: helpers.$g1
+
 .button
+    background-color: white 
     width: 100%
     display: block
     padding: 24px
@@ -12,8 +15,12 @@
     flex-direction: column
     align-items: center
     margin-inline: auto
+    color: helpers.$g7
+    font-weight: 500
+    font-size: 16px
     &.selected
         background-color: helpers.$g1
-        &::after
-            content: ''
-
+    &.prevSelected
+        border-top-right-radius: 20px
+    &.nextSelected
+        border-bottom-right-radius: 20px
