--- a/lib/components/GraphicEditor/Components/ActionsBar/style.module.sass
+++ b/lib/components/GraphicEditor/Components/ActionsBar/style.module.sass
@@ -1,6 +1,9 @@
 .actionsBar
     display: flex
     justify-content: space-between
+    align-items: center
+    height: 100%
+    padding-inline: 48px
 
 .subGroup
     display: flex
