--- a/lib/components/GraphicEditor/Components/Canvas/style.module.sass
+++ b/lib/components/GraphicEditor/Components/Canvas/style.module.sass
@@ -13,5 +13,5 @@
     width: 80%
     height:  80%
     border-radius: 8px
-    &:hover
+    &:hover, &.active
         outline:  3px solid helpers.$primary_500
