--- a/lib/components/GraphicEditor/Components/Toolbars/TextToolbar/FontFamilySelector/style.module.sass
+++ b/lib/components/GraphicEditor/Components/Toolbars/TextToolbar/FontFamilySelector/style.module.sass
@@ -1,6 +1,6 @@
 .select 
     padding: 8px 
     border-radius: 8px 
-    background-color: red
+    background-color: white
     border: 1px solid #e5e7eb
 
