--- a/lib/components/GraphicEditor/Components/Toolbars/TextToolbar/OpacitySelector/style.module.sass
+++ b/lib/components/GraphicEditor/Components/Toolbars/TextToolbar/OpacitySelector/style.module.sass
@@ -1,3 +1,5 @@
+@use '../../../../../../styles/helpers'
+    
 .toggler 
     width: 30px
     aspect-ratio: 1
@@ -5,6 +7,16 @@
     display: grid
     place-content: center
     position: relative
+
+.opacity
+    display: flex
+    justify-content: space-between
+
+.opacityLabel
+    font-weight: 400
+    padding: 4px
+    border-radius: 6px
+    background: helpers.$g05
 
 
 .sliderContainer 
@@ -15,18 +27,55 @@
     border-radius: 4px
     position: absolute
     left: 50%
-    bottom: -70px
+    bottom: -60px
     background-color: white
     transform: translate(-50%)
 
 
-input[type='range'] 
+/* Stile generale per l'input */
+input[type='range']
+  -webkit-appearance: none
+  width: 100%
+  height: 5px
+  background: #eaecf0
+  outline: none
+  opacity: 0.7
+  transition: opacity 0.2s
+  border-radius: 50%
+
+  /* Stile per il cursore */
+  &::-webkit-slider-thumb
     -webkit-appearance: none
-    width: 100%
-    height: 5px
-    background: #eaecf0
-    outline: none
-    opacity: 0.7
-    transition: opacity 0.2s
+    margin-top: -7.5px
+    width: 20px
+    height: 20px
+    border: 1px solid darkgray
+    background: white
+    cursor: pointer
     border-radius: 50%
+
+  &::-moz-range-thumb
+    width: 20px
+    height: 20px
+    border: 1px solid darkgray
+    background: white
+    cursor: pointer
+    border-radius: 50%
+
+  /* Stile per la barra su cui scorre il cursore */
+  &::-webkit-slider-runnable-track
+    width: 100%
+    height: 4px
+    cursor: pointer
+    background: linear-gradient(to right, #98a2b3 0%, #98a2b3 var(--value), #eaecf0 var(--value), #eaecf0 100%)
+
+  &::-moz-range-track
+    width: 100%
+    height: 4px
+    cursor: pointer
+    background: #eaecf0
+
+  &::-moz-range-progress
+    background: #98a2b3
+
 
