--- a/lib/components/Form/SliderInput/style.module.sass
+++ b/lib/components/Form/SliderInput/style.module.sass
@@ -1,39 +1,7 @@
-@use '../../../../../../styles/helpers'
-    
-.toggler 
-    width: 30px
-    aspect-ratio: 1
-    border-radius: 6px
-    display: grid
-    place-content: center
-    position: relative
-
-.opacity
-    display: flex
-    justify-content: space-between
-
-.opacityLabel
-    font-weight: 400
-    padding: 4px
-    border-radius: 6px
-    background: helpers.$g05
-
-
-.sliderContainer 
-    min-width: max-content
-    z-index: 20
-    color: black
-    padding: 8px
-    border-radius: 4px
-    position: absolute
-    left: 50%
-    bottom: -60px
-    background-color: white
-    transform: translate(-50%)
-
+@use '../../../styles/helpers'
 
 /* Stile generale per l'input */
-input[type='range']
+input[type='range'].input
   -webkit-appearance: none
   width: 100%
   height: 5px
@@ -41,7 +9,6 @@ input[type='range']
   outline: none
   opacity: 0.7
   transition: opacity 0.2s
-  border-radius: 50%
 
   /* Stile per il cursore */
   &::-webkit-slider-thumb
