--- a/lib/components/GraphicEditor/Components/Canvas/style.module.sass
+++ b/lib/components/GraphicEditor/Components/Canvas/style.module.sass
@@ -7,6 +7,9 @@
     min-width: 700px
     background-color: inherit
 
+.libraryWrapper
+    position: relative
+
 .canvas
     display: block
     margin: auto
