resizer in progress

--- a/lib/components/Editor/BaseEditor/Sidebar/style.module.sass
+++ b/lib/components/Editor/BaseEditor/Sidebar/style.module.sass
@@ -1,7 +1,9 @@
 @use '../../../../styles/helpers'
 
 .sidebar
-    background-color: white     
+    background-color: white
+    height: 100%
+    overflow: auto
     > div
         background-color: helpers.$g1
 
