--- a/lib/components/Editor/BaseEditor/style.module.sass
+++ b/lib/components/Editor/BaseEditor/style.module.sass
@@ -9,9 +9,10 @@
     display: grid
     grid-template-columns: auto 5fr 13fr
     height: calc(100% - 90px)
-    > *
-        height: 100%
-        overflow: auto
+
+.overflowAuto
+    height: 100%
+    overflow: auto
 
 .toolbarAndEditor
     border: 1px solid #e5e7eb 
