--- a/lib/components/Form/SliderInput/style.module.sass
+++ b/lib/components/Form/SliderInput/style.module.sass
@@ -5,7 +5,7 @@ input[type='range'].input
   -webkit-appearance: none
   width: 100%
   height: 5px
-  background: #eaecf0
+  background: inherit
   outline: none
   opacity: 0.7
   transition: opacity 0.2s
