--- a/lib/components/GraphicEditor/Components/Canvas/style.module.sass
+++ b/lib/components/GraphicEditor/Components/Canvas/style.module.sass
@@ -1,14 +1,20 @@
 @use '../../../../styles/helpers'
 
 .canvasContainer
-    height: 100% 
-    display: grid
-    place-content: center
-    min-width: 700px
+    height: calc( 100% - 30px ) 
+    overflow: auto
     background-color: inherit
+    min-width: auto
 
 .libraryWrapper
     position: relative
+    padding: 3rem
+    min-width: min-content
+    display: flex
+    justify-content: center
+    align-items: center
+    height: min-content
+    min-height: 100%
 
 .canvas
     display: block
